# nsu-oop-cpp-template

./: README.md  task1.cpp  task1_test.cpp  task2.h
classwork/: README.md
lab1/: CMakeLists.txt  main.cpp  task1.h  task2.cpp  task2_test.cpp
